fixed admin layout overflow

--- a/src/components/AdminTable/AdminTable.module.scss
+++ b/src/components/AdminTable/AdminTable.module.scss
@@ -4,7 +4,6 @@
     font-size: 16px;
   }
 
-  width: 100%;
   display: flex;
   flex-direction: column;
   height: 100%;
