--- a/src/router/AdminLayout/AdminLayout.module.scss
+++ b/src/router/AdminLayout/AdminLayout.module.scss
@@ -25,7 +25,7 @@
     height: 100%;
     background-color: white;
     border-radius: 12px;
-    overflow: hidden;
+    overflow: auto;
 
     --header-height: 70px;
 
